chain made of boxes works code split into separate files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,14 @@ include_directories(ngn ${SDL2_INCLUDE_DIRS})
 find_package (Eigen3 REQUIRED NO_MODULE)
 include_directories(ngn ${EIGEN3_INCLUDE_DIR})
 
-add_executable(ngn src/main.cpp)
+add_executable(ngn 
+    src/main.cpp 
+    src/box.h
+    src/box.cpp
+    src/constraint.h
+    src/drawing.h
+    src/drawing.cpp
+    src/solver.h
+    src/solver.cpp
+)
 target_link_libraries(ngn ${SDL2_LIBRARIES})
